# Change Log
All notable changes to this project will be documented in this file.  In the future, this project may adhere to Semantic Versioning.

CR = Change Request item
Local-only = Changes not reflected in Source Code
Backend Maintenance = Change is not user facing

## [2016-05-07] [Since 2016-04-30 Integration]


## [2016-04-30] [Since 2016-04-23 Integration]
- add "Ped" suffix
- fix error in procedures#show

## [2016-04-23] [Since 2016-04-16 Integration]


## [2016-04-16] [Since 2016-04-09 Integration]
### Added:
- S3 buckets are now backed up


## [2016-04-09] [Since 2016-04-02 Integration]
### Changed:
- add option for admins to toggle 'last visit' format
- change user controls specialist dropdown to use their MSP number instead of Pathways ID
- update 'broken links' task
- don't allow deletion of clinic without also changing specialist offices at its locations
- add faster JSON encoder, improving load times for pages that depend on that

### Fixed:
- Can now print patient information for specialists who only work out of hospitals or clinics

## [2016-04-02] [Since 2016-03-26 Integration]
### Changed:
- Closed clinics no longer show waittimes on specialty pages
- Display waittimes for specialists accepting referrals with limitations
- Remove Vancouver (hidden)
- Upgrade to Rails 4.0

## [2016-03-26] [Since 2016-03-19 Integration]
### Fixed:
- Fix clinic #public & #private

### Changed:
- After you 'View Pathways As' a different role or division, you're redirected to the place
you came from
- Admin users from live site now included in demo site
- All users created on demo site now stay on demo site, even if we reset all the other data
- Upgrade Ruby to 2.2.4
- "Contact Me" links now all show a form to send administrators emails through the app
- All emails on Pathways test servers now sent to developers to facilitate better testing

## [2016-03-19] [Since 2016-03-12 Integration]
### Changed: